# Hatlab_RFSOC

./: .gitignore  README.md  pyproject.toml  setup.py  startNameserver.bat  startNameserver.ps1
Hatlab_QubitMSMT/: 00_Send_receive_pulse.ipynb  02_Sweeping_variables.ipynb  06A_qubit_demos_noMarker.ipynb  T000_CW_Test.ipynb  T001_MixerTuneUp.ipynb
Hatlab_QubitMSMT/.ipynb_checkpoints/: 06A_qubit_demos_noMarker-checkpoint.ipynb  06_qubit_demos-checkpoint.ipynb  T000_CW_Test-checkpoint.ipynb  T001A_MixerTuneUp_pulse-checkpoint.ipynb
Hatlab_QubitMSMT/MSMT_notebooks/: 00_Tree_Q2.ipynb  01_PanfluteA.ipynb
Hatlab_QubitMSMT/tests/: sendFile.py  sudo.sh  test.py  testsudo.py
Hatlab_RFSOC/core/: __init__.py  averager_program.py  experiment.py  pulses.py  pulses_backup.py
Hatlab_RFSOC/custom_firmware/: readme.md
Hatlab_RFSOC/data/: __init__.py  data_transfer.py  datadict.py
Hatlab_RFSOC/demo_scripts/: P004AT_phaseReset_Mix2Gen_longRun.py  T001A_loopback_integ.py  T003_register_operation.py  T004AT_phaseReset_Mix2Gen_longRun.py  T004C_phaseReset_test.py  T004D_phaseReset_test_integ.py  T004_phaseReset.py
Hatlab_RFSOC/experiment/: __init__.py  experiment.py
Hatlab_RFSOC/helpers/: __init__.py  dataDict.py  dataTransfer.py  plotData.py  pulseConfig.py  yaml_editor.py
Hatlab_RFSOC/legacy/: pulseConfig.py  pyproject_.toml
Hatlab_RFSOC/msmt_scripts/: M000_ConfigSel.py  M001A_CavityResponse_fitQ.py  M001B_CavityResponse_IQHisto.py  M001_CavityResponse.py  M002_PulseSpec.py  M003A_LengthRabi.py  M003A_amplituderabi_sweepFreq.py  M003B_LengthRabi.py  M003_AmplitudeRabi.py  (+14 more)
(+106 files in other folders)
